Update logo to <js> for consistency

--- a/src/components/logo.astro
+++ b/src/components/logo.astro
@@ -3,5 +3,5 @@
   class="h-5 text-base group relative z-30 flex items-center space-x-1.5 text-black dark:text-white font-semibold font-mono"
 >
   <!-- Logo Text -->
-  <span class="-translate-y-0.5">&lt; js/ &gt;</span>
+  <span class="-translate-y-0.5">&lt;js&gt;</span>
 </a>
