--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -8,11 +8,11 @@ import { fetchBlogPosts } from "../lib/github";
 const posts = await fetchBlogPosts();
 ---
 
-<Layout title="My Writing">
+<Layout title="博客">
   <section class="relative z-20 max-w-2xl mx-auto my-12 px-7 lg:px-0">
     <PageHeading
-      title="My Writing"
-      description="Dive into my musings on life and tech in my latest posts; a blend of introspection and innovation. Keep an eye out for fresh insights and updates!"
+      title="博客"
+      description="Dive into my musings on life and tech in my latest posts;"
     />
 
     <div class="z-50 flex flex-col items-stretch w-full gap-5 my-8">
